# Assembler

./: .gitignore  Assembly.md  Encoding.md
Assembler/: CMakeLists.txt
Assembler/src/: formatErrorMessage.h  main.cpp
Assembler/src/AST/: AST.cpp  AST.h  ASTNode.h  Visitor.h
Assembler/src/AST/visitors/: ObjectCodeGenerator.cpp  ObjectCodeGenerator.h  staticAnalisysVisitor.cpp  staticAnalisysVisitor.h  symbolTable.h  symbolTableVisitor.cpp  symbolTableVisitor.h
Assembler/src/Lexer/: Lexer.cpp  Lexer.h  Mnemonics.h  Token.h
Assembler/src/Parser/: Parser.cpp  Parser.h
Assembler/src/objectDescriptor/: pobj_descriptor.h
Assembler/test_files/: test_complexVars.asm  test_formating.asm  test_labels.asm  test_loop.asm  test_memory.asm
